--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;800&family=Open+Sans:wght@300;400;600;700&display=swap');
+
+/* globals */
+    *, *::after, *::before {
+        padding: 0;
+        margin: 0;
+        border: 0;
+        box-sizing: inherit;
+    }
+    html {
+        font-size: 100%; /* 16px */
+    }
+    body {
+        box-sizing: border-box;
+        font-family: 'Open Sans', sans-serif;
+        font-weight: 400;
+        line-height: 1.5;
+    }
+/* globals */
