--- a/css/style.css
+++ b/css/style.css
@@ -1,115 +1,80 @@
+/********* base *********/
 /********* fonts *********/
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;800&family=Open+Sans:wght@300;400;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;800&family=Open+Sans:wght@300;400;600;700&display=swap");
 /********* fonts *********/
 /********* globals *********/
 *, *::after, *::before {
-    padding: 0;
-    margin: 0;
-    border: 0;
-    outline: none;
-    box-sizing: inherit;
-}
+  padding: 0;
+  margin: 0;
+  border: 0;
+  outline: none;
+  box-sizing: inherit; }
+
 html {
-    font-size: 100%; /* 16px */
-}
+  font-size: 100%;
+  /* 16px */ }
+
 body {
-    box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 400;
-    line-height: 1.5;
-}
+  box-sizing: border-box;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  line-height: 1.5; }
+
 ul {
-    list-style-type: none;
-}
+  list-style-type: none; }
+
 a, a:link, a:visited {
-    text-decoration: none;
-    color: initial;
-}
+  text-decoration: none;
+  color: initial; }
+
 /********* globals *********/
-/********* generals *********/
-.container {
-
-}
-/* btn */
-.btn {
-
-}
-.btn:hover {
-
-}
-/* btn */
-    /* btn-success */
-    .btn-success {
-
-    }
-    .btn-success:hover {
-
-    }
-    /* btn-success */
-/********* generals *********/
+/********* layouts *********/
 /********* header *********/
 .header {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    position: relative;
-    min-height: 8rem; /* 128px */
-    background-color: lightblue;
-}
-    /* navbar */
-    .navbar-brand {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  position: relative;
+  min-height: 8rem;
+  /* 128px */
+  background-color: lightblue; }
+  .header-icons {
+    position: absolute;
+    top: 2%;
+    right: 10%; }
 
-    }
-    .navbar {
-        flex: 0 75%;
-        display: flex;
-        justify-content: space-between;
-
-        /* background-color: lightcoral; */
-    }
-        .navbar-nav {
-            flex: 0 1 80%;
-
-            /* background-color: lightgoldenrodyellow; */
-        }
-            .navbar-list {
-                display: flex;
-                justify-content: space-between;
-
-                /* background-color: lightgray; */
-            }
-                .navbar-item {
-
-                }
-                    .navbar-link, .navbar-link:link, .navbar-link:visited {
-                        color: rgba(0,0,0, .8);
-                        text-transform: uppercase;
-                        font-size: .9rem;
-                        font-weight: 600;
-                    }
-    /* navbar */
-    /* sosial media icons */
-    .icons {
-
-    }
-    .icons-header {
-        position: absolute;
-        top: 2%;
-        right: 10%;
-    }
-        .icons-list {
-            display: flex;
-
-            background-color: lightgreen;
-        }
-            .icons-item {
-
-            }
-                .icons-link {
-
-                }
-    .icons-footer {
-
-    }
-    /* sosial media icons */
 /********* header *********/
+/********* components *********/
+/********** btn **********/
+/* btn */
+/* btn */
+/* btn-success */
+/* btn-success */
+/* btn-warning */
+/* btn-info */
+/********** btn **********/
+/********* navbar navigation  *********/
+.navbar {
+  flex: 0 75%;
+  display: flex;
+  justify-content: space-between; }
+  .navbar-nav {
+    flex: 0 1 80%; }
+  .navbar-list {
+    display: flex;
+    justify-content: space-between; }
+  .navbar-link, .navbar-link:link, .navbar-link:visited {
+    color: rgba(0, 0, 0, 0.8);
+    text-transform: uppercase;
+    font-size: .9rem;
+    font-weight: 600; }
+
+/********* navbar navigation  *********/
+/********* sosial media icons *********/
+.icons-list {
+  display: flex;
+  background-color: lightgreen; }
+
+/********* sosial media icons *********/
+/********* generals *********/
+/********* generals *********/
