--- a/css/style.css
+++ b/css/style.css
@@ -47,8 +47,46 @@ a, a:link, a:visited {
 /********* components *********/
 /********** btn **********/
 /* btn */
+.btn {
+  overflow: hidden;
+  position: relative;
+  padding: 1.25rem 3rem;
+  border-radius: 5rem;
+  cursor: pointer;
+  text-transform: uppercase;
+  color: #fff;
+  font-size: .8rem;
+  letter-spacing: 1px; }
+  .btn span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition-property: top, opacity;
+    transition-duration: .3s;
+    transition-timing-function: cubic-bezier(0.02, 0.04, 0.28, 2.1); }
+    .btn span:last-child {
+      opacity: 0;
+      top: 100%;
+      transform: translate(-50%, 0); }
+  .btn:hover, .btn:active {
+    /* btn:hover span:first-child { } */ }
+    .btn:hover span:first-child, .btn:active span:first-child {
+      opacity: 0;
+      top: 0;
+      transform: translate(-50%, -100%); }
+    .btn:hover span:last-child, .btn:active span:last-child {
+      opacity: 1;
+      top: 50%;
+      transform: translate(-50%, -50%); }
+
 /* btn */
 /* btn-success */
+.btn-success {
+  background-color: #3dbe71; }
+  .btn-success:hover {
+    background-color: #5db380; }
+
 /* btn-success */
 /* btn-warning */
 /* btn-info */
@@ -72,8 +110,18 @@ a, a:link, a:visited {
 /********* navbar navigation  *********/
 /********* sosial media icons *********/
 .icons-list {
-  display: flex;
-  background-color: lightgreen; }
+  display: flex; }
+
+.icons-link, .icons-link:link, .icons-link:active {
+  padding: .5rem; }
+
+.icons-link:hover .fab, .icons-link:active .fab {
+  color: #17015d; }
+
+.icons-fab {
+  width: 1rem;
+  height: 1rem;
+  color: #5db380; }
 
 /********* sosial media icons *********/
 /********* generals *********/
