--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,18 +1,56 @@
 /********** btn **********/
 /* btn */
 .btn {
+    overflow: hidden;
+    position: relative;
+    padding: 1.25rem 3rem;
+    border-radius: 5rem;
+    cursor: pointer;
+    text-transform: uppercase;
+    color: #fff;
+    font-size: .8rem;
+    letter-spacing: 1px;
 
-}
-.btn:hover {
+    span {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
 
+        transition-property: top, opacity;
+        transition-duration: .3s;
+        transition-timing-function: cubic-bezier(0.02, 0.04, 0.28, 2.1);
+
+        &:last-child {
+            opacity: 0;
+            top: 100%;
+            transform: translate(-50%, 0);
+        }
+    }
+
+    &:hover, &:active { /* btn:hover span:first-child { } */
+        span {
+            &:first-child {
+                opacity: 0;
+                top: 0;
+                transform: translate(-50%, -100%);
+            }
+            &:last-child {
+                opacity: 1;
+                top: 50%;
+                transform: translate(-50%, -50%);
+            }
+        }
+    }
 }
 /* btn */
     /* btn-success */
     .btn-success {
+        background-color: #3dbe71;
 
-    }
-    .btn-success:hover {
-
+        &:hover {
+            background-color: #5db380;
+        }
     }
     /* btn-success */
     /* btn-warning */
