--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -5,9 +5,8 @@
     align-items: center;
     position: relative;
     min-height: 8rem; /* 128px */
-    background-color: lightblue;
+    // background-color: lightblue;
 
-    
     &-brand { }
 
     &-icons {
