--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -8,21 +8,97 @@
 
     &-nav {
         flex: 0 1 80%;
+        display: flex;
+        align-items: center;
+        
 
         // background-color: lightgoldenrodyellow;
     }
         &-list {
+            flex-basis: 80%;
             display: flex;
             justify-content: space-between;
 
             // background-color: lightgray;
         }
             &-item {}
-                &-link, &-link:link, &-link:visited {
-                    color: rgba(0,0,0, .8);
-                    text-transform: uppercase;
-                    font-size: .9rem;
-                    font-weight: 600;
+                &-link {
+                    position: relative;
+
+                    span {
+                        pointer-events: none;
+
+                        &:first-child {
+                            position: relative;
+                            left: 0;
+                            bottom: 0;
+
+                            transition-property: bottom, opacity;
+                            transition-duration:  .3s; 
+                            transition-timing-function: cubic-bezier(0.02, 0.04, 0.28, 2.1);
+                        }
+                        &:last-child {
+                            opacity: 0;
+                            position: absolute;
+                            top: 100%;
+                            left: 50%;
+                            transform: translateX(-50%);
+
+                            transition-property: top, opacity;
+                            transition-duration:  .3s; 
+                            transition-timing-function: cubic-bezier(0.02, 0.04, 0.28, 2.1);
+                        }
+                    }
+                    &::before {
+                        content: '';
+                        position: absolute;
+                        left: 0;
+                        bottom: -5px;
+                        width: 0%;
+                        height: 3px;
+
+                        transition: width 0s, background-color .3s;
+                    }
+                    &::after {
+                        content: '';
+                        position: absolute;
+                        right: 0;
+                        bottom: -5px;
+                        width: 0%;
+                        height: 3px;
+                        background-color: #3dbe71;
+
+                        transition: width .3s;
+                    }
+                    &:link, &:visited {
+                        color: rgba(0,0,0, .8);
+                        text-transform: uppercase;
+                        font-size: .9rem;
+                        font-weight: 600;
+                    }
+                    &:hover, &:active {
+                        &::before {
+                            width: 100%;
+                            background-color: #3dbe71;
+                            transition: width .3s;
+                        }
+                        &::after {
+                            width: 100%;
+                            background-color: transparent;
+                            transition: all 0s;
+                        }
+                        span {
+                            &:first-child {
+                                opacity: 0;
+                                bottom: 100%;
+                            }
+                            &:last-child {
+                                opacity: 1;
+                                top: 50%;
+                                transform: translate(-50%, -50%);
+                            }
+                        }
+                    }
                 }
 }
 /********* navbar navigation  *********/
