--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -30,21 +30,28 @@
 
                         &:first-child {
                             position: relative;
-                            left: 0;
-                            bottom: 0;
-
-                            transition-property: bottom, opacity;
+                            // left: 0;
+                            // bottom: 0;
+                            top: 0;
+                            right: 0;
+                            
+                            transition-property: right, opacity;
+                            // transition-property: bottom, opacity;
                             transition-duration:  .3s; 
                             transition-timing-function: cubic-bezier(0.02, 0.04, 0.28, 2.1);
                         }
                         &:last-child {
                             opacity: 0;
                             position: absolute;
-                            top: 100%;
-                            left: 50%;
-                            transform: translateX(-50%);
+                            // top: 100%;
+                            // left: 50%;
+                            // transform: translateX(-50%);
+                            top: 49%;
+                            left: 100%;
+                            transform: translateY(-50%);
 
-                            transition-property: top, opacity;
+                            transition-property: left, opacity;
+                            // transition-property: top, opacity;
                             transition-duration:  .3s; 
                             transition-timing-function: cubic-bezier(0.02, 0.04, 0.28, 2.1);
                         }
@@ -90,12 +97,15 @@
                         span {
                             &:first-child {
                                 opacity: 0;
-                                bottom: 100%;
+                                // bottom: 100%;
+                                right: 100%;
                             }
                             &:last-child {
                                 opacity: 1;
-                                top: 50%;
-                                transform: translate(-50%, -50%);
+                                // top: 50%;
+                                // transform: translate(-50%, -50%);
+                                left: 50%;
+                                transform: translate(-50%,-50%);
                             }
                         }
                     }
