--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;800&family=Open+Sans:wght@300;400;600;700&display=swap');
 /********* fonts *********/
 /********* globals *********/
-*, *::after, *::before {
+* {
     padding: 0;
     margin: 0;
     border: 0;
