Section Info is written.

--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -53,6 +53,11 @@
         }
     }
     /* btn-success */
-    /* btn-warning */
+    /* btn-middle */
+    .btn-middle {
+        font-size: .9rem;
+        padding: 1.5rem 7rem;
+    }
+    /* btn-middle */
     /* btn-info */
 /********** btn **********/
