--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,8 @@ body {
   box-sizing: border-box;
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
-  line-height: 1.5; }
+  line-height: 1.5;
+  color: #504f4f; }
 
 ul {
   list-style-type: none; }
@@ -28,6 +29,18 @@ a, a:link, a:visited {
   color: initial; }
 
 /********* globals *********/
+.t1 {
+  font: 800 2.3rem/1.3 'Nunito', sans-serif;
+  /* 36.8px */
+  color: #17015d; }
+  .t1 span {
+    display: block; }
+
+.t4 {
+  font-size: 1.1rem;
+  /* 17.6px */
+  color: #504f4f; }
+
 /********* layouts *********/
 /********* header *********/
 .header {
@@ -88,7 +101,12 @@ a, a:link, a:visited {
     background-color: #5db380; }
 
 /* btn-success */
-/* btn-warning */
+/* btn-middle */
+.btn-middle {
+  font-size: .9rem;
+  padding: 1.5rem 7rem; }
+
+/* btn-middle */
 /* btn-info */
 /********** btn **********/
 /********* navbar navigation  *********/
@@ -113,7 +131,7 @@ a, a:link, a:visited {
         top: 0;
         right: 0;
         transition-property: right, opacity;
-        transition-duration: .3s;
+        transition-duration: .3s, .1s;
         transition-timing-function: cubic-bezier(0.02, 0.04, 0.28, 2.1); }
       .navbar-link span:last-child {
         opacity: 0;
@@ -179,5 +197,31 @@ a, a:link, a:visited {
   color: #5db380; }
 
 /********* sosial media icons *********/
+/********* pages *********/
+.sec-info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 39rem;
+  padding: 4rem 6rem 1rem 6rem; }
+  .sec-info-container {
+    display: flex;
+    height: 100%; }
+  .sec-info-left {
+    flex: 0 0 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    height: 60%; }
+  .sec-info-right {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+  .sec-info-img {
+    width: 90%;
+    height: 90%; }
+
 /********* generals *********/
 /********* generals *********/
