--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -17,6 +17,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
     line-height: 1.5;
+    color: #504f4f;
 }
 ul {
     list-style-type: none;
