--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 /********* base *********/
 @import './base/_base.scss';
+@import './base/_typography.scss';
 
 /********* layouts *********/
 @import './layouts/_header.scss';
@@ -8,6 +9,9 @@
 @import './components/buttons.scss';
 @import './components/navbar.scss';
 @import './components/icons.scss';
+
+/********* pages *********/
+@import './pages/home';
 
 
 /********* generals *********/
