--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,6 @@
+/********* abstracts *********/
+@import './abstracts/variables';
+
 /********* base *********/
 @import './base/_base.scss';
 @import './base/_typography.scss';
