--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,3 +1,4 @@
+/* 1 section info */
 .sec-info {
     display: flex;
     justify-content: center;
@@ -34,3 +35,51 @@
         height: 90%;
     }
 }
+/* 1 section info */
+/* 2 section features */
+.sec-features {
+    min-height: 50rem;
+    padding: 4rem 6rem;
+
+    display: flex;  /* sectop and secbottom */
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
+    // background-color: lightyellow;
+
+    &-top {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 70%;
+        text-align: center;
+
+        // background-color: lightcoral;
+    }
+    &-bottom {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        width: 90%;
+        min-height: 32rem; /* 512px */
+
+        // background-color: lightcyan;
+    }
+    &-feature {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        width: 27%; /* 332.37px */
+        height: 13rem; /* 208px */
+        text-align: justify;
+
+        // background-color: lightgreen;
+    }
+    &-icon {
+        font-size: 2.5rem;
+        color: $colorPrimary;
+    }
+}
+/* 2 section features */
