--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -8,10 +8,12 @@
 }
 .t2 {
     font: 800 2rem/1.2 'Nunito', sans-serif; /* 32px */
+    text-transform: capitalize;
     color: $colorSecondary;
 }
 .t3 {
     font-size: 1.2rem; /* 19.2px */
+    text-transform: capitalize;
     color: $colorSecondary;
 }
 .t4 {
