--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 /********* base *********/
 @import './base/_base.scss';
 @import './base/_typography.scss';
+@import './base/utilities';
 
 /********* layouts *********/
 @import './layouts/_header.scss';
