--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -83,3 +83,81 @@
     }
 }
 /* 2 section features */
+/* 3 section workflow */
+.sec-workflow {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 68rem; /* 1088px */
+    padding: 4rem 0 2rem 0; /* 64px 0 32px 0 */
+    background-color: #e3f5eb;
+
+    &-top {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 70%;
+        height: 6rem; /* 96px */
+        text-align: center;
+
+        background-color: lightsalmon;
+    }
+    &-bottom {
+        flex: 0 85%;
+        display: flex;
+
+        background-color: lightskyblue;
+    }
+    &-flow {
+        flex: 1;
+        display: flex;
+        justify-content: center;
+    }
+    &-line {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        width: 4px;
+        background-color: #e3a396;
+    }
+    &-circle {
+        display: block;
+        width: 1.3rem;
+        height: 1.3rem;
+        border-radius: 50%;
+        background-color: #e3a396;
+    }
+    &-left {
+        flex: 0 48%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+    }
+    &-right {
+        flex: 0 48%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    &-box {
+        width: 80%;
+        height: 10rem; /* 160px */
+    }
+    &-heading {
+        letter-spacing: 1px;
+        margin-bottom: .5rem;
+    }
+    &-icon {
+        float: left;
+        width: 7rem;
+        height: 7rem;
+        margin: 0 1rem;
+        border-radius: 50%;
+        border: 4px solid #e3a396;
+        box-shadow: 2px 2px 5px rgba($colorBlack, .4);
+        shape-outside: circle(50%);
+    }
+}
+/* 3 section workflow */
