--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -5,6 +5,9 @@ $colorSecondary: #17015d;
 /* font color */
 $colorFont1: #504f4f;
 
+/* font family */
+$fontSecondary: 'Nunito', sans-serif;
+
 /* general color */
 $colorBlack: #000;
 $colorWhite: #fff;
