--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,7 @@
 @import './components/buttons.scss';
 @import './components/navbar.scss';
 @import './components/icons.scss';
+@import './components/counter.scss';
 
 /********* pages *********/
 @import './pages/home';
