--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -18,7 +18,7 @@
         flex-direction: column;
         justify-content: space-between;
         align-items: flex-start;
-        height: 60%;
+        height: 65%;
 
         // background-color: lightcyan;
     }
@@ -38,7 +38,7 @@
 /* 1 section info */
 /* 2 section features */
 .sec-features {
-    min-height: 50rem;
+    height: 50rem;
     padding: 4rem 6rem;
 
     display: flex;  /* sectop and secbottom */
@@ -51,6 +51,7 @@
     &-top {
         display: flex;
         flex-direction: column;
+        justify-content: space-around;
         align-items: center;
         width: 70%;
         text-align: center;
@@ -62,7 +63,7 @@
         flex-wrap: wrap;
         justify-content: space-between;
         width: 90%;
-        min-height: 32rem; /* 512px */
+        height: 32rem; /* 512px */
 
         // background-color: lightcyan;
     }
@@ -96,6 +97,7 @@
     &-top {
         display: flex;
         flex-direction: column;
+        justify-content: space-around;
         align-items: center;
         width: 70%;
         height: 6rem; /* 96px */
@@ -129,13 +131,14 @@
         flex: 0 48%;
         display: flex;
         flex-direction: column;
+        justify-content: space-between;
         align-items: flex-end;
     }
     &-right {
         flex: 0 48%;
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
+        justify-content: space-between;
     }
     &-box {
         width: 80%;
@@ -157,3 +160,39 @@
     }
 }
 /* 3 section workflow */
+/* 4 section counter */
+.sec-counter {
+    display: flex;
+    justify-content: center;
+    height: 40rem; /* 640px */
+    padding: 3rem 6rem; /* 39px 96rem */
+
+    background: linear-gradient(to left top, #e3a39660, #ffff0080), url('../../imgs/counter-bg-2000.jpg') center/cover no-repeat;
+
+    &-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        width: 80%;
+
+        // background-color: lightsalmon;
+    }
+    &-top {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 85%;
+        text-align: center;
+
+        // background-color: lightskyblue;
+    }
+    &-bottom {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+
+        // background-color: lightsalmon;
+    }
+}
+/* 4 section counter */
