--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -10,6 +10,10 @@
     font: 800 2rem/1.2 'Nunito', sans-serif; /* 32px */
     text-transform: capitalize;
     color: $colorSecondary;
+
+    &-primary {
+        color: $colorPrimary;
+    }
 }
 .t3 {
     font-size: 1.2rem; /* 19.2px */
