--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -46,8 +46,6 @@
     justify-content: space-between;
     align-items: center;
 
-    // background-color: lightyellow;
-
     &-top {
         display: flex;
         flex-direction: column;
@@ -55,8 +53,9 @@
         align-items: center;
         width: 70%;
         text-align: center;
-
-        // background-color: lightcoral;
+    }
+    &-heading {
+        white-space: nowrap;
     }
     &-bottom {
         display: flex;
@@ -64,8 +63,6 @@
         justify-content: space-between;
         width: 90%;
         height: 32rem; /* 512px */
-
-        // background-color: lightcyan;
     }
     &-feature {
         display: flex;
@@ -75,8 +72,6 @@
         width: 27%; /* 332.37px */
         height: 13rem; /* 208px */
         text-align: justify;
-
-        // background-color: lightgreen;
     }
     &-icon {
         font-size: 2.5rem;
@@ -167,7 +162,7 @@
     height: 40rem; /* 640px */
     padding: 3rem 6rem; /* 39px 96rem */
 
-    background: linear-gradient(to left top, #e3a39660, #ffff0080), url('../../imgs/counter-bg-2000.jpg') center/cover no-repeat;
+    background: linear-gradient(to left top, #e3a39660, #ffff0080), url('../imgs/counter-bg-2000.jpg') center/cover no-repeat;
 
     &-container {
         display: flex;
@@ -196,3 +191,22 @@
     }
 }
 /* 4 section counter */
+/* 5 section card */
+.sec-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 55rem;
+    padding: 4rem 5rem 2rem 5rem;
+    background-color: #edeeee;
+
+    &-cards {
+        flex: 0 0 90%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+    }
+}
+/* 5 section card */
