--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -22,9 +22,9 @@
         transition-timing-function: cubic-bezier(0.02, 0.04, 0.28, 2.1);
 
         &:last-child {
-        opacity: 0;
-        top: 100%;
-        transform: translate(-50%, 0); /* -50% 0 Ile Degerini Resetledik */
+            opacity: 0;
+            top: 100%;
+            transform: translate(-50%, 0); /* -50% 0 Ile Degerini Resetledik */
         }
     }
 
@@ -72,6 +72,11 @@
     &-middle {
         font-size: 0.9rem;
         padding: 1.5rem 7rem;
+    }
+    /* btn-large */
+    &-large {
+        font-size: .9rem;
+        padding: 2rem 8rem;
     }
 }
 /* btn */
