--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,7 @@
 @import './components/icons';
 @import './components/counter';
 @import './components/card';
+@import './components/comment';
 
 /********* pages *********/
 @import './pages/home';
