--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,5 +1,5 @@
 .t1 {
-    font: 800 2.3rem/1.3 'Nunito', sans-serif; /* 36.8px */
+    font: 800 2.3rem/1.3 $fontSecondary; /* 36.8px */
     color: $colorSecondary;
 
     span {
@@ -7,12 +7,17 @@
     }
 }
 .t2 {
-    font: 800 2rem/1.2 'Nunito', sans-serif; /* 32px */
+    font-family: $fontSecondary;
+    font-size: 2rem; /* 32px */
     text-transform: capitalize;
     color: $colorSecondary;
 
     &-primary {
         color: $colorPrimary;
+    }
+    &-white {
+        color: $colorWhite;
+        text-shadow: 2px 2px rgba($colorBlack, .4);
     }
 }
 .t3 {
